--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Nerva – Cognitive Adversary</title>
+<title>VYRN – Sales Pressure Arena</title>
 <style>
 body {
-    background: #0f0f12;
+    background: #0c0c11;
     color: #e6e6e6;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     margin: 0;
@@ -15,8 +15,8 @@ body {
     margin: auto;
     padding: 30px;
 }
-h1 { letter-spacing: 2px; font-weight: 500; }
-select, button {
+h1 { letter-spacing: 4px; }
+select, button, input {
     padding: 10px;
     margin-top: 10px;
     background: #1a1a20;
@@ -25,10 +25,16 @@ select, button {
 }
 .chat {
     margin-top: 20px;
-    height: 400px;
+    height: 350px;
     overflow-y: auto;
     background: #15151b;
     padding: 15px;
+    border: 1px solid #222;
+}
+.analysis {
+    margin-top: 20px;
+    background: #111118;
+    padding: 20px;
     border: 1px solid #222;
 }
 .message { margin-bottom: 15px; }
@@ -40,13 +46,14 @@ select, button {
     padding: 15px;
     border: 1px solid #222;
 }
+input { width: 65%; }
 </style>
 </head>
 <body>
 
 <div class="container">
-<h1>NERVA</h1>
-<p>Convince me.</p>
+<h1>VYRN</h1>
+<p>Pitch. Or get exposed.</p>
 
 <label>Industry:</label>
 <select id="industry">
@@ -57,37 +64,35 @@ select, button {
 </select>
 
 <br>
+
+<input type="text" id="textInput" placeholder="Deliver your pitch...">
+<button onclick="sendText()">Send</button>
 <button onclick="startListening()">🎤 Speak</button>
 
 <div class="chat" id="chat"></div>
 
 <div class="metrics">
-<h3>Psychological Metrics</h3>
-<p>Emotional Control: <span id="control">50</span>%</p>
-<p>Trust Level: <span id="trust">40</span>%</p>
-<p>Pressure Index: <span id="pressure">30</span>%</p>
-<p>Resistance Level: <span id="resistance">60</span>%</p>
+<h3>Performance Metrics</h3>
+<p>Authority: <span id="authority">50</span>%</p>
+<p>Certainty: <span id="certainty">50</span>%</p>
+<p>Clarity: <span id="clarity">50</span>%</p>
+<p>Persuasion: <span id="persuasion">50</span>%</p>
+<p>Overall Grade: <span id="grade">C</span></p>
 </div>
+
+<div class="analysis">
+<h3>Professional Breakdown</h3>
+<p id="essay">Waiting for your pitch...</p>
+</div>
+
 </div>
 
 <script>
 
-// Core State
-let control = 50;
-let trust = 40;
-let pressure = 30;
-let resistance = 60;
-
-// Personality Variables (random each session)
-let skepticism = Math.floor(Math.random()*10)+1;
-let egoSensitivity = Math.floor(Math.random()*10)+1;
-let financialStress = Math.floor(Math.random()*10)+1;
-let timePressure = Math.floor(Math.random()*10)+1;
-
-// Behavioral Memory
-let empathyCount = 0;
-let pressureTactics = 0;
-let logicalFraming = 0;
+let authority = 50;
+let certainty = 50;
+let clarity = 50;
+let persuasion = 50;
 
 function addMessage(text, type) {
     const chat = document.getElementById("chat");
@@ -99,82 +104,119 @@ function addMessage(text, type) {
 }
 
 function updateMetrics() {
-    document.getElementById("control").innerText = control;
-    document.getElementById("trust").innerText = trust;
-    document.getElementById("pressure").innerText = pressure;
-    document.getElementById("resistance").innerText = resistance;
+    document.getElementById("authority").innerText = authority;
+    document.getElementById("certainty").innerText = certainty;
+    document.getElementById("clarity").innerText = clarity;
+    document.getElementById("persuasion").innerText = persuasion;
+
+    let avg = (authority + certainty + clarity + persuasion) / 4;
+    let grade = "F";
+    if (avg > 85) grade = "A";
+    else if (avg > 75) grade = "B";
+    else if (avg > 65) grade = "C";
+    else if (avg > 55) grade = "D";
+    document.getElementById("grade").innerText = grade;
 }
 
-function analyzeInput(input) {
+function speak(text) {
+    let msg = new SpeechSynthesisUtterance(text);
+    let voices = speechSynthesis.getVoices();
 
-    let response = "";
+    // Try to choose deeper male voice
+    let preferred = voices.find(v =>
+        v.name.toLowerCase().includes("david") ||
+        v.name.toLowerCase().includes("mark") ||
+        v.name.toLowerCase().includes("alex") ||
+        v.name.toLowerCase().includes("male")
+    );
+
+    if (preferred) msg.voice = preferred;
+
+    msg.pitch = 0.7;
+    msg.rate = 1;
+    speechSynthesis.speak(msg);
+}
+
+function evaluatePitch(input) {
+    input = input.toLowerCase();
+
+    let roast = "";
     let industry = document.getElementById("industry").value;
 
-    // Empathy detection
-    if (input.includes("understand") || input.includes("feel") || input.includes("fair") || input.includes("makes sense")) {
-        empathyCount++;
-        trust += 8;
-        resistance -= 6;
-        response = "At least you’re acknowledging how I feel… most reps skip that part.";
+    // Weak words
+    if (input.includes("just") || input.includes("maybe") || input.includes("kind of")) {
+        certainty -= 15;
+        roast = "You sound unsure. That hesitation? That’s weakness. Eliminate it.";
     }
 
-    // Pressure detection
-    if (input.includes("today") || input.includes("now") || input.includes("deadline") || input.includes("limited")) {
-        pressureTactics++;
-        pressure += 12;
-        trust -= 7;
-        resistance += 10;
-        response = "That urgency… it feels forced. Why are you rushing me?";
+    if (input.includes("today") || input.includes("limited") || input.includes("act now")) {
+        persuasion -= 10;
+        roast = "Urgency without value is amateur hour. You don’t create pressure. You create desire.";
     }
 
-    // Manipulation detection
-    if (input.includes("guarantee") || input.includes("promise") || input.includes("everyone") || input.includes("best")) {
-        trust -= 10;
-        resistance += 8;
-        response = "Big claims. I’ve heard big claims before.";
+    if (input.includes("because") || input.includes("reason")) {
+        clarity += 10;
+        authority += 8;
+        roast = "At least you're structuring logic. Keep building on that.";
     }
 
-    // Logical framing detection
-    if (input.includes("because") || input.includes("reason") || input.includes("data")) {
-        logicalFraming++;
-        control += 5;
-        trust += 5;
-        response = "Okay… at least you're explaining your reasoning.";
+    if (input.length > 150) {
+        clarity -= 5;
+        roast = "Too long. Tighten it up. Precision sells.";
     }
 
-    // If no trigger, respond based on resistance
-    if (!response) {
-        if (resistance > 75) {
-            response = "I’m not convinced. You’re not addressing what actually matters to me.";
-        } else if (trust > 60) {
-            response = "You’re different than most " + industry + " reps. I’m listening… carefully.";
-        } else {
-            response = "I’ve dealt with too many " + industry + " salespeople who say the same things.";
-        }
+    if (!roast) {
+        roast = "Generic. You sound like every other rep in " + industry + ". Bring dominance.";
     }
 
-    return response;
+    return roast;
+}
+
+function generateEssay(input) {
+    return `Here’s the breakdown. 
+
+Your pitch lacked controlled dominance. High-level sales requires command presence, precise framing, and emotional certainty. You must eliminate filler language and remove hesitation. Authority in sales is not about volume — it's about control and clarity. 
+
+You need stronger positioning. Lead with certainty. Establish status. Anchor value before discussing urgency. Use structured logic: problem → consequence → solution → ownership. 
+
+Right now, your delivery suggests effort. Elite closers suggest inevitability. 
+
+Fix the certainty. Control the frame. Lead the conversation — do not chase it.`;
+}
+
+function processInput(input) {
+    addMessage("You: " + input, "user");
+
+    let roast = evaluatePitch(input);
+    addMessage("VYRN: " + roast, "bot");
+
+    let essay = generateEssay(input);
+    document.getElementById("essay").innerText = essay;
+
+    speak(roast + " " + essay);
+
+    updateMetrics();
+}
+
+function sendText() {
+    let input = document.getElementById("textInput").value;
+    if (!input) return;
+    processInput(input);
+    document.getElementById("textInput").value = "";
 }
 
 function startListening() {
     const recognition = new(window.SpeechRecognition || window.webkitSpeechRecognition)();
     recognition.lang = "en-US";
     recognition.start();
-
     recognition.onresult = function(event) {
-        const speech = event.results[0][0].transcript.toLowerCase();
-        addMessage("You: " + speech, "user");
-
-        let botReply = analyzeInput(speech);
-        addMessage("Customer: " + botReply, "bot");
-
-        updateMetrics();
+        const speech = event.results[0][0].transcript;
+        processInput(speech);
     };
 }
 
-addMessage("Customer: Why are you calling me?", "bot");
+addMessage("VYRN: You have one shot. Impress me.", "bot");
 
 </script>
-
 </body>
 </html>
